# cubix_data_engineer_capstone

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: deploy.yaml  deploy.yml
final_output/: final_wide_sales.parquet.parquet
src/cubix_data_engineer_capstone/: upload_latest_whl.ps1
src/cubix_data_engineer_capstone/etl/bronze/: extract_and_load_file.py
src/cubix_data_engineer_capstone/etl/gold/: daily_product_category_metrics.py  daily_sales_metrics.py  wide_sales.py
src/cubix_data_engineer_capstone/etl/silver/: calendar.py  customers.py  product_category.py  product_subcategory.py  products.py  sales.py  scd.py
src/cubix_data_engineer_capstone/utils/: authentication.py  config.py  datalake.py
src/src/: test.py
tests/: conftest.py
tests/etl/gold/: test_daily_product_category_metrics.py  test_daily_sales_metrics.py  test_wide_sales.py
tests/etl/silver/: test_calendar.py  test_customers.py  test_product_category.py  test_product_subcategory.py  test_products.py  test_sales.py
