[project]
name = "cubix-data-engineer-capstone"
version = "0.2.2"
description = ""
authors = [
    {name = "GaborBoros24",email = "gabor.boros24@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyspark (>=3.5.5,<4.0.0)",
    "numpy (>=1,<2)",
    "delta-spark (>=3.3.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "cubix_data_engineer_capstone", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pyarrow = "^19.0.1"
pre-commit = "^4.2.0"
pandas = "^2.2.3"

[tool.pytest.ini_options]
python_paths = ["src"]
testpaths = [".\tests"]
filterwarnings = ["ignore:DeprecationWarning"]
addopts = "--disable-warnings -p no:warnings"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
